Show backend states in ui (#149)
* Added new state api

* Added tests for state api

* Added new state api to swagger

* Added status polling

* Status indication revised

* Updated coloring in StatusComponent

* Added tests for 'connected' lable

* Added test for connection state tooltip
