# src/RolandK.TimeTrack.Application/Models/TimeTrackApplicationStatePublic.cs
@@ -1,0 +1,5 @@
+namespace RolandK.TimeTrack.Application.Models;
+
+public record TimeTrackApplicationStatePublic(
+    DateTimeOffset ServiceStartupTimestamp,
+    DateTimeOffset? LastSuccessfulExport);
